<resources>
    <string name="app_name">FilmingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_peliculas">Películas</string>
    <string name="menu_series">Series</string>
    <string name="inicio">Inicio</string>
    <string name="byEdu">By Edu Quiroga</string>

    <string name="titulo">Título:</string>
    <string name="director">Director:</string>
    <string name="reparto">Reparto:</string>
    <string name="clasificacion">Clasificación:</string>
    <string name="sinopsis">Sinopsis:</string>
    <string name="temporadas">Temporadas:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>