<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragmentInicio2">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practicat6intento4.ui.home.HomeFragment"
        android:label="@string/menu_peliculas"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.practicat6intento4.ui.gallery.GalleryFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/fragmentInicio2"
        android:name="com.example.practicat6intento4.fragmentInicio2"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio2" />

</navigation>